# harmonics-api

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: population.ipynb  requirements.txt
src/harmonics_api/: main.py
src/harmonics_api/configs/: errors.py
src/harmonics_api/routes/: artists.py  recs.py  releases.py  users.py
src/harmonics_api/utils/: helper.py
src/music-catalog/: main.py
src/population/: main.ipynb
